--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <h1>Happy Valentine's Day, My Love! 💖</h1>
+    <h1>Happy Valentine's Day, My Love 💖</h1>
     <button id="secretButton">Click for a surprise 💌</button>
     <p id="message">You are the best thing that ever happened to me! I love you! 💕</p>
 
