--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>For My Love</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel='shortcut icon' href='love.ico' />
     <iframe src="https://www.youtuberepeater.com/watch?v=kPhpHvnnn0Q#gsc.tab=0" allow="autoplay" style="display:none" id="iframeAudio">
     </iframe> 
 
