--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>For My Love</title>
+    <title>Happy Valentine's Day</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel='shortcut icon' href='love.ico' />
@@ -13,7 +13,7 @@
 </head>
 <body>
     <h1>Happy Valentine's Day, My Love 💖</h1>
-    <button id="secretButton">Click for a surprise 💌</button>
+    <button id="secretButton">Bấm vô đây nha, bấm nhiều lên nha 💌</button>
     <p id="message">You are the best thing that ever happened to me! I love you! 💕</p>
 
     <script src="script.js"></script>
